--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --secondory-font-color: #212121;
   --accent-color: #2196f3;
   --border-br-color: #2f303a;
+  --border-br-color2: #afb1b8;
   --section-team-bg-color: #f5f4fa;
 }
 
@@ -161,13 +162,30 @@ button {
   letter-spacing: 0.02em;
   color: var(--main-font-color);
 }
+.svg-icon-envelope {
+  margin-right: 10px;
+  fill: currentColor;
+}
+.svg-icon-phone {
+  margin-left: 10px;
+  fill: currentColor;
+}
 
 /* Заголовок H1 */
 
 .hero {
+  width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--border-br-color);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/background-hero-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-section-title {
@@ -218,6 +236,7 @@ button {
 }
 
 .qualities-list-title {
+  margin-top: 30px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -300,7 +319,7 @@ button {
   color: var(--main-font-color);
 }
 
-/* ---------Подвал--------- */
+/* -----------------Подвал----------------- */
 .footer-address:hover,
 .footer-address:focus,
 .footer-mail:hover,
@@ -316,13 +335,13 @@ button {
   background-color: var(--border-br-color);
 }
 
-/* .footer-box {
+.footer-box {
   display: flex;
-  flex-direction: column;
-} */
-.footer-main:not(:first-child) {
-  margin-top: 20px;
+  /* flex-direction: column;  */
 }
+/* .footer-main:not(:first-child) {
+  margin-top: 20px;
+} */
 
 .footer-link {
   font-family: 'Raleway';
@@ -339,7 +358,7 @@ button {
 }
 
 .footer-address {
-  /* margin-top: 20px; */
+  margin-top: 20px;
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
@@ -362,6 +381,60 @@ button {
   line-height: 1.71;
   font-style: normal;
   color: rgba(255, 255, 255, 0.6);
+}
+/* lessong 4 */
+.footer-icon-box {
+  margin-left: 70px;
+}
+
+.footer-title {
+  display: block;
+  margin-top: 12px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--main-ligth-color);
+}
+.footer-list-icon {
+  display: flex;
+  margin-top: 20px;
+}
+
+.footer-icon-item {
+  width: 44px;
+  height: 44px;
+  margin-left: 10px;
+}
+
+.footer-icon-item:first-child {
+  margin-left: 0;
+}
+
+.footer-icon {
+  fill: var(--main-ligth-color);
+}
+
+.footer-icon-link {
+  /* кружок вокруг иконки */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-icon-link:hover .footer-icon,
+.footer-icon-link:focus .footer-icon {
+  fill: var(--main-ligth-color);
 }
 
 /* -------------------Портфолио------------------- */
@@ -417,6 +490,12 @@ button {
   display: block;
 }
 
+.gallery-item:hover {
+  /* эфект тени */
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .gallery-text-box {
   padding-left: 24px;
   padding-right: 24px;
@@ -439,4 +518,104 @@ button {
   font-size: 16px;
   line-height: 1.88;
   color: var(--main-font-color);
+}
+/* -------------lesson-4--------------- */
+.background-svg-icon {
+  display: flex;
+  height: 120px;
+  /* width: 270px; */
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: var(--section-team-bg-color);
+}
+/* ссылки на соц-сети */
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+  /* выравнивание соц-сетей в карточках */
+}
+
+.team-soc-item {
+  width: 44px;
+  height: 44px;
+  margin-left: 10px;
+  /* выравнивание */
+}
+.team-coc-link:first-child {
+  margin-left: 0px;
+}
+.team-soc-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--accent-color);
+}
+.team-soc-link:hover .team-soc-icon,
+.team-soc-link:focus.team-soc-icon {
+  fill: var(--main-ligth-color);
+  /* цвет svg при hover focus соц-сетей*/
+}
+.team-soc-icon {
+  fill: #afb1b8;
+  /* цвет svg соц-сетей*/
+}
+/* Постояннын клиеты */
+
+.title-clients {
+  font-weight: 700px;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
+.clients-list {
+  display: flex;
+  margin-top: 50px;
+}
+
+.clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 170px;
+  height: 92px;
+  border-width: 1px;
+  border-color: var(--border-br-color2);
+  border-style: solid;
+  border-radius: 4px;
+}
+
+/* .contacts-item {
+  margin-left: 30px;
+} */
+
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
+  fill: var(--accent-color);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent-color);
+}
+
+.clients-item {
+  margin-left: 30px;
+}
+
+.clients-item:first-child {
+  margin-left: 0;
+}
+
+.clients-icon {
+  fill: #afb1b8;
 }
